2008-10-19  higepon  <higepon@users.sourceforge.jp>

        * ByteVectorProcedures.cpp : Added utf32->string and string->utf32.

        * UTF32Codec.h : Added.

        * UTF32Codec.cpp : Added.

        * ByteVectorProcedures.cpp : Added string->utf8.

2008-10-18  higepon  <higepon@users.sourceforge.jp>

        * ErrorProcedures.cpp (throwIOError): Added for Codec Error.

        * Added: bytevector->string and string->bytevector.

2008-10-16  higepon  <higepon@users.sourceforge.jp>

        * Added: bytevector-u64-native-ref, bytevector-s64-native-ref
               , bytevector-u64-native-set! ,bytevector-s64-native-set!
               , bytevector-u64-ref, bytevector-s64-ref
               , bytevector-u64-set! and bytevector-s64-set!.

        * Added: bytevector-u32-native-ref, bytevector-s32-native-ref
               , bytevector-u32-native-set! ,bytevector-s32-native-set!
               , bytevector-u32-ref, bytevector-s32-ref
               , bytevector-u32-set! and bytevector-s32-set!.

        * Added: bytevector-u16-native-ref, bytevector-s16-native-ref
               , bytevector-u16-native-set! and bytevector-s16-native-set!.

        * ByteVectorProcedures.cpp (scheme::bytevectorU16RefEx): Added bytevector-u16-ref.

2008-10-15  higepon  <higepon@users.sourceforge.jp>

        * ByteVectorProcedures.cpp (bytevectorEqPEx): Added bytevector=?.
                                   (bytevectorFillDEx): Added bytevector-fill!.
                                   (bytevectorCopyDEx): Added bytevector-copy!.
                                   (bytevectorCopyEx): Added bytevector-copy.
                                   : Added bytevector-u8-set!, bytevector-u8-ref, bytevector-s8-ref and bytevector-s8-set!.
                                   (u8ListToByteVector): Added u8-list->bytevector and bytevector->u8-list.

        * ByteVector.h (equal): Added.

        * ByteVectorProcedures.cpp (makeBytevectorEx): Added make-bytevector.
