@@ -1797,3 +1797,68 @@ val
                  (string-append "\xFEFF;" str))
        (string=? (utf32->string (bv-append #vu8(0 0 #xFF #xFE) (string->utf32 str 'big)) 'big #t)
                  (string-append "\xFFFE;" str)))))
+
+(#vu8(97 0 112 0 112 0 #xBB #x3 101 0) (string->utf16 "app\x3BB;e" 'little))
+(#vu8(0 97 0 112 0 112 #x3 #xBB 0 101) (string->utf16 "app\x3BB;e" 'big))
+(#vu8(0 97 0 112 0 112 #x3 #xBB 0 101) (string->utf16 "app\x3BB;e"))
+(#t (and
+     (let ([str "apple"])
+       (string=? str (utf16->string (string->utf16 str 'big) 'big)))
+     (let ([str "app\x3BB;e"])
+       (string=? str (utf16->string (string->utf16 str 'big) 'big)))
+     (let ([str "\x0;\x1;\x80;\xFF;\xD7FF;\xE000;\x10FFFF;"])
+       (string=? str (utf16->string (string->utf16 str 'big) 'big)))
+     #t))
+
+(#t (let ([str "apple"]
+          [bv-append (lambda (bv1 bv2)
+                       (let ([bv (make-bytevector (+ (bytevector-length bv1)
+                                                     (bytevector-length bv2)))])
+                         (bytevector-copy! bv1 0 bv 0  (bytevector-length bv1))
+                         (bytevector-copy! bv2 0 bv (bytevector-length bv1) (bytevector-length bv2))
+                         bv))])
+      (and (string=? (utf16->string (bv-append #vu8(#xFF #xFE) (string->utf16 str 'little)) 'big) str)
+          (string=? (utf16->string (bv-append #vu8(#xFE #xFF) (string->utf16 str 'big)) 'little) str)
+          (string=? (utf16->string (bv-append #vu8(#xFF #xFE) (string->utf16 str 'little)) 'little #t)
+                    (string-append "\xFEFF;" str))
+          (string=? (utf16->string (bv-append #vu8(#xFE #xFF) (string->utf16 str 'little)) 'little #t)
+                    (string-append "\xFFFE;" str))
+          (string=? (utf16->string (bv-append #vu8(#xFE #xFF) (string->utf16 str 'big)) 'big #t)
+                    (string-append "\xFEFF;" str))
+           (string=? (utf16->string (bv-append #vu8(#xFF #xFE) (string->utf16 str 'big)) 'big #t)
+                     (string-append "\xFFFE;" str))
+           )))
+(#t (let ([str "app\x3BB;e"]
+          [bv-append (lambda (bv1 bv2)
+                       (let ([bv (make-bytevector (+ (bytevector-length bv1)
+                                                     (bytevector-length bv2)))])
+                         (bytevector-copy! bv1 0 bv 0  (bytevector-length bv1))
+                         (bytevector-copy! bv2 0 bv (bytevector-length bv1) (bytevector-length bv2))
+                         bv))])
+      (and (string=? (utf16->string (bv-append #vu8(#xFF #xFE) (string->utf16 str 'little)) 'big) str)
+           (string=? (utf16->string (bv-append #vu8(#xFE #xFF) (string->utf16 str 'big)) 'little) str)
+           (string=? (utf16->string (bv-append #vu8(#xFF #xFE) (string->utf16 str 'little)) 'little #t)
+                     (string-append "\xFEFF;" str))
+           (string=? (utf16->string (bv-append #vu8(#xFE #xFF) (string->utf16 str 'little)) 'little #t)
+                     (string-append "\xFFFE;" str))
+           (string=? (utf16->string (bv-append #vu8(#xFE #xFF) (string->utf16 str 'big)) 'big #t)
+                     (string-append "\xFEFF;" str))
+           (string=? (utf16->string (bv-append #vu8(#xFF #xFE) (string->utf16 str 'big)) 'big #t)
+                     (string-append "\xFFFE;" str)))))
+(#t (let ([str "\x0;\x1;\x80;\xFF;\xD7FF;\xE000;\x10FFFF;"]
+          [bv-append (lambda (bv1 bv2)
+                       (let ([bv (make-bytevector (+ (bytevector-length bv1)
+                                                     (bytevector-length bv2)))])
+                         (bytevector-copy! bv1 0 bv 0  (bytevector-length bv1))
+                         (bytevector-copy! bv2 0 bv (bytevector-length bv1) (bytevector-length bv2))
+                         bv))])
+      (and (string=? (utf16->string (bv-append #vu8(#xFF #xFE) (string->utf16 str 'little)) 'big) str)
+           (string=? (utf16->string (bv-append #vu8(#xFE #xFF) (string->utf16 str 'big)) 'little) str)
+           (string=? (utf16->string (bv-append #vu8(#xFF #xFE) (string->utf16 str 'little)) 'little #t)
+                     (string-append "\xFEFF;" str))
+           (string=? (utf16->string (bv-append #vu8(#xFE #xFF) (string->utf16 str 'little)) 'little #t)
+                     (string-append "\xFFFE;" str))
+           (string=? (utf16->string (bv-append #vu8(#xFE #xFF) (string->utf16 str 'big)) 'big #t)
+                     (string-append "\xFEFF;" str))
+           (string=? (utf16->string (bv-append #vu8(#xFF #xFE) (string->utf16 str 'big)) 'big #t)
+                     (string-append "\xFFFE;" str)))))
